@@ -1,6 +1,8 @@
 DD MMM YYYY - 2.9.2 - To be released
 ------------------------------------
 
+ * {dis|en}able-dechunk-logging: Option to disable logging of
+   dechunking in audit log when log level < 9.
  * Updates libinjection to: da027ab52f9cf14401dd92e34e6683d183bdb3b4
    [ModSecurity team]
  * {dis|en}able-handler-logging: Option to disable logging of Apache handler
